# wsl-tmux-nvim-setup

./: +  .bashrc  .gitconfig  .gitignore  .gitignore_global  .tmux.conf  .yamllint  Auto-Update-Guide.md  CHANGELOG.md  IMPLEMENTATION-PLAN-Release-System.md  Makefile  README.md  REFACTOR.md  deployment-engineer-progress.md  general-purpose-progress-phase3.md  general-purpose-progress-phase4.md  general-purpose-progress-phase5.md  kitty.conf  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  shell-scripting-pro-progress.md  version.json
.aws-scripts/: deploy-lambda.sh
.git-scripts/: git-branch-delete  git-pr  git-push  git-reset  git-rollback  git-search  git-switch
.github/workflows/: ci.yml  create-release.yml  prepare-assets.yml  release.yml
auto_install/: components.json  main.py
auto_install/components/: install_claude.sh  install_dependencies.sh  install_git.sh  install_kitty.sh  install_lazygit.sh  install_nerdfonts.sh  install_nvim.sh  install_screenshots.sh  install_synth_shell.sh  install_tmux.sh  install_yazi.sh
claude/: statusline.sh
cli/: config.py  wsm.py
cli/commands/: __init__.py  config_cmd.py  install.py  list_cmd.py  rollback.py  status.py  update.py
cli/integration/: __init__.py  auto_install_bridge.py
cli/interactive/: __init__.py  textual_installer.py  wizard.py
cli/utils/: __init__.py  backup.py  config_validator.py  download.py  enhanced_logging.py  extract.py  github.py  network_resilience.py  performance.py  version_utils.py
docs/: CLI_REFERENCE.md  GITHUB_ACTIONS.md  MIGRATION_GUIDE.md  SUCCESS_METRICS_VALIDATION.md  TROUBLESHOOTING.md
lazygit/: config.yml
nvim/lua/core/: keymaps.lua  plugins.lua
nvim/lua/core/plugin_config/: coc.lua  easymotion.lua  init.lua  nvim-tree.lua  tabline.lua  telescope.lua  treesitter.lua
nvim/plugin/: packer_compiled.lua
scripts/: create-checksums.sh  generate-changelog.py  install.sh  prepare-release.sh  upload-release.py  version-manager.py
synth-shell/: synth-shell-prompt.config  synth-shell-prompt.sh
tests/: __init__.py  conftest.py
tests/e2e/: test_user_workflows.py
tests/integration/: __init__.py  test_github_actions.py
tests/performance/: test_benchmarks.py
tests/security/: __init__.py  test_security_validation.py
tests/unit/: __init__.py  test_wsm_cli.py
tests/unit/commands/: __init__.py  test_install.py
tests/unit/utils/: test_version_utils.py
yazi/: init.lua  keymap.toml  theme.toml  yazi.toml
